--- a/Assets/CSS/default.css
+++ b/Assets/CSS/default.css
@@ -24,3 +24,14 @@
   display: flex;
   flex-direction: row;
 }
+
+.column {
+  display: flex;
+  flex-direction: column;
+}
+
+.sectionTittle {
+  text-align: center;
+  padding: 48px 0px 12px;
+  border-bottom: 2px solid #bf0411;
+}
