Finalizacao da pagina inicial

--- a/Assets/CSS/campeonatoBrasileiro.css
+++ b/Assets/CSS/campeonatoBrasileiro.css
@@ -69,3 +69,7 @@
 .sectionTabelaCampeonatoBrasileiro .legenda ul .rebaixamento::marker {
   color: red;
 }
+
+.sectionTabelaCampeonatoBrasileiro h2 {
+  font-size: 24px;
+}
