--- a/Assets/CSS/default.css
+++ b/Assets/CSS/default.css
@@ -35,3 +35,19 @@
   padding: 48px 0px 12px;
   border-bottom: 2px solid #bf0411;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+span,
+a,
+li,
+td {
+  font-family: "Quicksand", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
