--- a/Assets/CSS/proximoJogo.css
+++ b/Assets/CSS/proximoJogo.css
@@ -1,6 +1,10 @@
+.sectionProximoJogo h2 {
+  font-size: 24px;
+}
 .proximoJogo {
   align-items: center;
   justify-content: center;
+  font-size: 24px;
 }
 
 .proximoJogo img {
@@ -23,4 +27,5 @@
 
 .infoJogo span {
   margin: 8px;
+  font-size: 18px;
 }
