--- a/Assets/CSS/default.css
+++ b/Assets/CSS/default.css
@@ -34,6 +34,8 @@
   text-align: center;
   padding: 48px 0px 12px;
   border-bottom: 2px solid #bf0411;
+  width: 1024px;
+  font-size: 24px;
 }
 
 h1,
